--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,6 +41,7 @@ jobs:
           if [ -z "$norme" ]; then
             echo "Everything is on the norme! ✅🔥"
           else
+            echo "$norme"
             echo "Norme FAILURE! 😞❌"
             exit 1
           fi
