--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,12 +37,13 @@ jobs:
       - name: Norme test
         run: |
           norminette -v
-          norme=$(norminette src include lib/libft)
+          norminette src include lib/libft | grep -v OK > norme_output.txt
+          norme=$(cat norme_output.txt)
           if [ -z "$norme" ]; then
             echo "Everything is on the norme! ✅🔥"
             exit 0
           else
-            echo "Norme:"
+            echo "Errors:"
             echo "$norme"
             echo "Norme FAILURE! 😞❌"
             exit 1
