--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,8 +37,7 @@ jobs:
       - name: Norme test
         run: |
           norminette -v
-          norminette src include lib/libft | grep -v OK > norme_output.txt || true
-          norme=$(cat norme_output.txt)
+          norme=$(norminette src include lib/libft | grep -v OK || true)
           if [ -z "$norme" ]; then
             echo "Everything is on the norme! ✅🔥"
             exit 0
