--- a/.github/workflows/leaks.yaml
+++ b/.github/workflows/leaks.yaml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          submodules: true
+
 
       - name: Install dependencies
         run: |
