ci leaks ignore incorrect maps

--- a/.github/workflows/leaks.yaml
+++ b/.github/workflows/leaks.yaml
@@ -29,7 +29,7 @@ jobs:
         run: |
           for map in maps/*.ber; do
             echo "Testing $map..."
-            valmessage=$(valgrind ./so_long "$map" 2>&1)
+            valmessage=$(valgrind ./so_long "$map" 2>&1 || true)
             leaks=$(echo "$valmessage" | grep 'no leaks are possible')
             if [ ! -z "$leaks" ]; then
               echo "There are no leaks for $map! ✅🔥"
